TESTERS/ft_containers-unit-test/logs.txt
In file included from ../utilities_tests/iterator_traits.cpp:1:
In file included from ../utilities_tests/../system/system_methods.ipp:2:
In file included from ../utilities_tests/../system/lib.hpp:12:
In file included from /usr/bin/../lib/gcc/aarch64-linux-gnu/10/../../../../include/c++/10/array:35:
/usr/bin/../lib/gcc/aarch64-linux-gnu/10/../../../../include/c++/10/bits/c++0x_warning.h:32:2: error: This file requires compiler and library support for the ISO C++ 2011 standard. This support must be enabled with the -std=c++11 or -std=gnu++11 compiler options.
#error This file requires compiler and library support \
 ^
In file included from ../utilities_tests/iterator_traits.cpp:1:
../utilities_tests/../system/system_methods.ipp:6:23: error: use of undeclared identifier 'nullptr'
        gettimeofday(&start, nullptr);
                             ^
../utilities_tests/../system/system_methods.ipp:37:12: error: no member named 'to_string' in namespace 'std'
        a += std::to_string(static_cast<int>(pid));
             ~~~~~^
../utilities_tests/../system/system_methods.ipp:68:41: error: no member named 'to_string' in namespace 'std'
        (t1 >= t2) ? printElement(GREEN + std::to_string(t2) + "ms" + RESET) : printElement(REDD + std::to_string(t2) + "ms" + RESET);
                                          ~~~~~^
../utilities_tests/../system/system_methods.ipp:68:98: error: no member named 'to_string' in namespace 'std'
        (t1 >= t2) ? printElement(GREEN + std::to_string(t2) + "ms" + RESET) : printElement(REDD + std::to_string(t2) + "ms" + RESET);
                                                                                                   ~~~~~^
../utilities_tests/../system/system_methods.ipp:69:39: error: no member named 'to_string' in namespace 'std'
        (t1 > t2) ? printElement(REDD + std::to_string(t1) + "ms" + RESET) : printElement(GREEN + std::to_string(t1) + "ms" + RESET);
                                        ~~~~~^
../utilities_tests/../system/system_methods.ipp:69:97: error: no member named 'to_string' in namespace 'std'
        (t1 > t2) ? printElement(REDD + std::to_string(t1) + "ms" + RESET) : printElement(GREEN + std::to_string(t1) + "ms" + RESET);
                                                                                                  ~~~~~^
../utilities_tests/iterator_traits.cpp:2:10: error: expected "FILENAME" or <FILENAME>
#include UTILITIES
         ^
../utilities_tests/iterator_traits.cpp:3:10: fatal error: '../incl/Vector.hpp' file not found
#include VECTOR
         ^~~~~~
../utilities_tests/../system/../../config.hpp:8:18: note: expanded from macro 'VECTOR'
#define VECTOR                  "../incl/Vector.hpp"
                                ^~~~~~~~~~~~~~~~~~~~
9 errors generated.
exicographical_compare
                                ^
../utilities_tests/lexicographical.cpp:26:2: error: use of undeclared identifier 'exit'; did you mean '_exit'?
        exit(run_bool_unit_test("lexicographical", lexicographical_test));
        ^~~~
        _exit
/usr/include/unistd.h:603:13: note: '_exit' declared here
extern void _exit (int __status) __attribute__ ((__noreturn__));
            ^
10 errors generated.
o member named 'is_integral' in namespace 'std'
        (_is_integral<float>() == std::is_integral<float>()) ? 0 : res = 0;
                                  ~~~~~^
../utilities_tests/is_integral.cpp:8:50: error: expected '(' for function-style cast or type construction
        (_is_integral<float>() == std::is_integral<float>()) ? 0 : res = 0;
                                                   ~~~~~^
../utilities_tests/is_integral.cpp:8:52: error: expected expression
        (_is_integral<float>() == std::is_integral<float>()) ? 0 : res = 0;
                                                          ^
../utilities_tests/is_integral.cpp:9:3: error: use of undeclared identifier 'ft'
        (_is_integral<int>() == std::is_integral<int>()) ? 0 : res = 0;
         ^
../utilities_tests/../system/../../config.hpp:24:24: note: expanded from macro '_is_integral'
#define _is_integral            ft::is_integral
                                ^
../utilities_tests/is_integral.cpp:9:19: error: expected '(' for function-style cast or type construction
        (_is_integral<int>() == std::is_integral<int>()) ? 0 : res = 0;
                      ~~~^
../utilities_tests/is_integral.cpp:9:21: error: expected expression
        (_is_integral<int>() == std::is_integral<int>()) ? 0 : res = 0;
                           ^
../utilities_tests/is_integral.cpp:9:31: error: no member named 'is_integral' in namespace 'std'
        (_is_integral<int>() == std::is_integral<int>()) ? 0 : res = 0;
                                ~~~~~^
../utilities_tests/is_integral.cpp:9:46: error: expected '(' for function-style cast or type construction
        (_is_integral<int>() == std::is_integral<int>()) ? 0 : res = 0;
                                                 ~~~^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
